unpackaged/main/default/objects/Internal_Chat_Cut_off_Time__mdt/fields/Cut_off_Time__c.field-meta.xml
<CustomField>
    <fullName>Cut_off_Time__c</fullName>
    <label>Cut-off Time</label>
    <length>30</length>
    <type>Text</type>
</CustomField>