unpackaged/main/default/objects/Internal_Chat_Cut_off_Time__mdt/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message to be shown if agents try to start a chat after HOOP</description>
    <inlineHelpText>Message to be shown if agents try to start a chat after HOOP</inlineHelpText>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>